--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
+    "mongoose-sequence": "^5.3.1",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.1"
   }
